--- a/LYPageViewControllerTest/LYPageViewControllerTest/Base.lproj/Main.storyboard
+++ b/LYPageViewControllerTest/LYPageViewControllerTest/Base.lproj/Main.storyboard
@@ -55,10 +55,23 @@
                                     <action selector="styleTwoClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gmO-Rf-EYc"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3WJ-vq-Unp">
+                                <rect key="frame" x="262.5" y="403" width="75" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="nBS-ZF-aVe"/>
+                                    <constraint firstAttribute="width" constant="75" id="zbp-ng-8Qh"/>
+                                </constraints>
+                                <state key="normal" title="列表样式三"/>
+                                <connections>
+                                    <action selector="styleThreeClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BOo-dl-FFH"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="3WJ-vq-Unp" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2BJ-CC-UyL"/>
                             <constraint firstItem="cSd-Pa-I6p" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="128" id="Bei-Br-toA"/>
+                            <constraint firstItem="3WJ-vq-Unp" firstAttribute="top" secondItem="6ZI-IX-qaT" secondAttribute="bottom" constant="88" id="Dez-8g-XlG"/>
                             <constraint firstItem="cSd-Pa-I6p" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jNk-qE-z3L"/>
                             <constraint firstItem="6ZI-IX-qaT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="k3n-jh-fms"/>
                             <constraint firstItem="6ZI-IX-qaT" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="oVP-k6-dz1"/>
