--- a/LYPageViewControllerTest/LYPageViewControllerTest/Views/StyleOne/LYStyleOneTableSectionFooterView.xib
+++ b/LYPageViewControllerTest/LYPageViewControllerTest/Views/StyleOne/LYStyleOneTableSectionFooterView.xib
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10117"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -13,7 +13,19 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8iA-kW-Nlr">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="30"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="footer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m4G-c4-Vee">
+                            <rect key="frame" x="137" y="5" width="46" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
                     <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstItem="m4G-c4-Vee" firstAttribute="centerY" secondItem="8iA-kW-Nlr" secondAttribute="centerY" id="nvG-IQ-9h5"/>
+                        <constraint firstItem="m4G-c4-Vee" firstAttribute="centerX" secondItem="8iA-kW-Nlr" secondAttribute="centerX" id="rNR-Cv-wlD"/>
+                    </constraints>
                 </view>
             </subviews>
             <constraints>
